@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Fix regression where auto-saved drafts were not being deleted when cancelling compose message in dynamic view.
 * [mms] Fix regression in parsing permission values (Bug #12812).
 * [mms] Fix regression in showing non-available actions in dynamic mailbox view when ACL rules prevent them (Bug #12808).
  </notes>
@@ -3311,6 +3312,7 @@
    <date>2013-10-29</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Fix regression where auto-saved drafts were not being deleted when cancelling compose message in dynamic view.
 * [mms] Fix regression in parsing permission values (Bug #12812).
 * [mms] Fix regression in showing non-available actions in dynamic mailbox view when ACL rules prevent them (Bug #12808).
    </notes>
